--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -3,6 +3,7 @@ body{
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
 }
 
 .header{
@@ -16,4 +17,11 @@ body{
     list-style: none;
     gap: 1em;
   }
+}
+footer{
+  background-color: #202426;
+  color: #fff;
+  padding: 1em;
+  display: flex;
+  justify-content: space-around;
 }
