--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -16,9 +16,11 @@ body {
   justify-content: space-between;
   color: #fff;
   padding: 0 1em;
+  align-items: center;
   &__home-link {
     color: #fff;
     text-decoration: none;
+    text-transform: uppercase;
   }
   &__navbar {
     display: flex;
@@ -48,6 +50,7 @@ footer {
   padding: 1em;
   display: flex;
   justify-content: space-around;
+  font-size: .8em;
   & a {
     color: #fff;
     text-decoration: none;
