--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -5,11 +5,10 @@
   &__section {
     min-height: 20em;
     margin:0 ;
-    padding: 0 1em;
     box-sizing: border-box;
     background-color: #fff;
     margin: 0 6em;
-    padding: 1em;
+    padding:1em 3em;
   }
   &__hero {
     background-color: #1a84c0;
@@ -46,17 +45,22 @@
       }
     }
   }
-
-  &__skill-list{
+  &__skills{
     display: flex;
-    list-style: none;
-    padding: 0;
-    flex-wrap: wrap;
-    gap: 1em;
-    & li{
-      background-color: #fcdd5e;
-      padding: .5em;
+    gap: 2em;
+    &-list{
+      font-size: .8em;
+      display: flex;
+      list-style: none;
+      padding: 0;
+      flex-wrap: wrap;
+      gap: .8em;
+      & li{
+        background-color: #fcdd5e;
+        padding: .5em;
+      }
+  
     }
-
   }
+  
 }
