--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -1,32 +1,47 @@
+@mixin break($width) {
+  @media screen and (min-width: $width) {
+    @content;
+  }
+}
+
 .home {
-  &__content-container{
+  &__content-container {
     background-color: #fcdd5e;
   }
   &__section {
     min-height: 20em;
-    margin:0 ;
+    margin: 0;
     box-sizing: border-box;
     background-color: #fff;
     margin: 0 6em;
-    padding:1em 3em;
+    padding: 0 1em;
+    @include break(768px) {
+      padding: 1em 3em;
+    }
   }
   &__hero {
     background-color: #1a84c0;
     color: #fff;
     margin: 0;
-    height: calc(100vh - 3em);
     display: flex;
+    flex-direction: column;
     align-items: center;
-    padding: 0 3em;
     gap: 0 3em;
     justify-content: space-between;
-    &-text{
-      width: 40%;
+    @include break(768px) {
+      height: calc(100vh - 3em);
+      padding: 0 3em;
+      flex-direction: row;
     }
-    &-copy{
+    &-text {
+      @include break(768px){
+        width: 40%;
+      }
+    }
+    &-copy {
       line-height: 1.8em;
     }
-    &-link-list{
+    &-link-list {
       margin-top: 0;
       padding: 0;
       list-style: none;
@@ -34,33 +49,35 @@
       gap: 1em;
       font-size: 2em;
     }
-    &-intro{
-      font-size: 3.5em;
+    &-intro {
       margin-bottom: 0.2em;
+      line-height: 1.5em;
+      font-size: 2em;
+      @include break(768px) {
+        font-size: 3.5em;
+      }
     }
-    & a{
+    & a {
       color: #56bdec;
-      &:hover{
-        color: #fff
+      &:hover {
+        color: #fff;
       }
     }
   }
-  &__skills{
+  &__skills {
     display: flex;
     gap: 2em;
-    &-list{
-      font-size: .8em;
+    &-list {
+      font-size: 0.8em;
       display: flex;
       list-style: none;
       padding: 0;
       flex-wrap: wrap;
-      gap: .8em;
-      & li{
+      gap: 0.8em;
+      & li {
         background-color: #fcdd5e;
-        padding: .5em;
+        padding: 0.5em;
       }
-  
     }
   }
-  
 }
