--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -116,6 +116,15 @@
         }
       }
     }
+    &-card{
+      box-sizing: border-box;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: 1em;
+      // box-shadow: 0px 0px 11px 5px rgba(235,235,235,1);
+      border: 1px solid #202426;
+    }
     &-title{
       text-decoration: none;
 
