--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -116,7 +116,7 @@
         }
       }
     }
-    &-card {
+    &-card{
       box-sizing: border-box;
       display: flex;
       flex-direction: column;
@@ -125,27 +125,28 @@
       // box-shadow: 0px 0px 11px 5px rgba(235,235,235,1);
       border: 1px solid #202426;
     }
-    &-title {
+    &-title{
       text-decoration: none;
+
     }
-    &-buttons {
+    &-buttons{
       text-decoration: none;
       color: #202426;
       background-color: #fcdd5e;
       flex-grow: 1;
-      padding: 0.3em;
+      padding: .3em;
       text-align: center;
       line-height: 1.2em;
-      &:hover {
+      &:hover{
         background-color: #202426;
         color: #fff;
       }
-      &-container {
+      &-container{
         display: flex;
         justify-content: space-around;
-        gap: 0.3em;
+        gap: .3em;
         flex-direction: column;
-        @include break(786px) {
+        @include break(786px){
           flex-direction: row;
           gap: 1em;
         }
@@ -166,35 +167,6 @@
         background-color: #202426;
         padding: 0.3em;
         color: #fff;
-      }
-    }
-  }
-  &__contact {
-    display: flex;
-    flex-direction: column;
-    gap: 1em;
-    &-image {
-      width: 40%;
-    }
-    @include break(768px) {
-      flex-direction: row;
-      justify-content: space-around;
-      flex-wrap: wrap;
-    }
-    & article {
-      box-sizing: border-box;
-      padding: 1em;
-      width: 100%;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      @include break(768px) {
-        width: 40%;
-      }
-      & label {
-        display: flex;
-        flex-direction: column;
-        margin-bottom: 1em;
       }
     }
   }
