--- a/src/_mixin.scss
+++ b/src/_mixin.scss
@@ -18,3 +18,22 @@
     color: #fff;
   }
 }
+
+@mixin skills {
+  font-size: 0.7em;
+  display: flex;
+  list-style: none;
+  padding: 0;
+  flex-wrap: wrap;
+  gap: 0.8em;
+  justify-content: left;
+  @include break(768px) {
+    font-size: 0.8em;
+  }
+  & li {
+    background-color: #202426;
+    padding: 0.3em;
+    color: #fff;
+    flex-grow: 0;
+  }
+}
