--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,600;0,900;1,300;1,600&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,600;0,900;1,300;1,400;1,600&display=swap');
 @mixin break($width) {
   @media screen and (min-width: $width) {
     @content;
@@ -8,29 +7,64 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
   box-sizing: border-box;
-  font-size: 18px;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 400;
+  line-height: 1.75;
+  color: #202426;
   @include break(768px) {
     font-size: 16px;
   }
-  & h2 {
+  & h1, & h2{
     color: #1a84c0;
     margin-bottom: 1em;
+    font-weight: 900;
   }
-  & p{
+  & p {
     line-height: 1.5em;
     @include break(768px) {
       line-height: 1.8em;
     }
   }
-  & ul{
+  & li {
+    line-height: 1.5em;
+    @include break(768px) {
+      line-height: 1.8em;
+    }
+  }
+  & ul {
     padding: 0 1.3em;
   }
-  & button{
-    font-family: "Montserrat", sans-serif; 
+  & b{
+    font-weight: 400 !important;
+  }
+  & button {
+    font-family: "Montserrat", sans-serif;
   }
 }
+p {margin-bottom: 1rem;}
+
+// h1, h2, h3, h4, h5 {
+//   margin: 3rem 0 1.38rem;
+//   font-family: 'Montserrat', sans-serif;
+//   font-weight: 300;
+//   line-height: 1.3;
+// }
+
+// h1 {
+//   margin-top: 0;
+//   font-size: 4.209rem;
+// }
+
+// h2 {font-size: 3.157rem;}
+
+// h3 {font-size: 2.369rem;}
+
+// h4 {font-size: 1.777rem;}
+
+// h5 {font-size: 1.333rem;}
+
+// small, .text_small {font-size: 0.75rem;}
 
 .header {
   background-color: #1a84c0;
@@ -39,12 +73,18 @@ body {
   color: #fff;
   padding: 0 1em;
   align-items: center;
+  & h1{
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+  }
   &__home-link {
     color: #fff;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 0.5em;
     line-height: 0;
+    margin: 0;
     @include break(768px) {
       font-size: 16px;
     }
@@ -52,7 +92,7 @@ body {
   &__navbar {
     display: flex;
     list-style: none;
-    gap: .2em;
+    gap: 0.2em;
     flex-direction: column;
     font-size: 0.8em;
     padding: 0;
@@ -61,9 +101,9 @@ body {
       gap: 1em;
       font-size: 1em;
     }
-    & li{
+    & li {
       text-align: right;
-      @include break(768px){
+      @include break(768px) {
         text-align: left;
       }
     }
@@ -79,7 +119,7 @@ body {
 .content-container {
   background-color: #fcdd5e;
   padding: 0;
-  @include break(768px){
+  @include break(768px) {
     padding: 0 6em;
   }
   &__content {
@@ -87,7 +127,7 @@ body {
     background-color: #fff;
     padding: 1em 2em;
     min-height: 100vh;
-    @include break(768px){
+    @include break(768px) {
       padding: 1em 5em;
     }
   }
@@ -98,10 +138,10 @@ footer {
   padding: 1em;
   display: flex;
   justify-content: space-around;
-  font-size: .6em;
+  font-size: 0.6em;
   flex-direction: column;
-  @include break(768px){
-    font-size: .8em;
+  @include break(768px) {
+    font-size: 0.8em;
     flex-direction: row;
   }
   & a {
