--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -57,6 +57,8 @@ p {margin-bottom: 1rem;}
     margin: 0;
     display: flex;
     flex-direction: column;
+    font-weight: 800;
+    font-size: 2em;
   }
   &__home-link {
     color: #fff;
