--- a/src/pages/projects/project.module.scss
+++ b/src/pages/projects/project.module.scss
@@ -1,30 +1,34 @@
-h1, h2, h3, h4, h5 {
-  margin: 3rem 0 1.38rem;
-  font-family: 'Montserrat', sans-serif;
-  font-weight: 300;
-  line-height: 1.3;
-}
-
-h1 {
-  margin-top: 0;
-  font-size: 4.209rem;
-}
-
-h2 {font-size: 3.157rem;}
-
-h3 {font-size: 2.369rem;}
-
-h4 {font-size: 1.777rem;}
-
-h5 {font-size: 1.333rem;}
-
-small, .text_small {font-size: 0.75rem;}
-
-strong{
-  font-weight: 600;
+.project {
+  & h1, & h2, & h3, & h4, & h5 {
+    margin: 3rem 0 1.38rem;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 300;
+    line-height: 1.3;
+  }
+  
+  & h1 {
+    margin-top: 0;
+    font-size: 4.209rem;
+  }
+  
+  & h2 {font-size: 3.157rem;}
+  
+  & h3 {font-size: 2.369rem;}
+  
+  & h4 {font-size: 1.777rem;}
+  
+  & h5 {font-size: 1.333rem;}
+  
+  & small, & .text_small {font-size: 0.75rem;}
+  
+  & strong{
+    font-weight: 600;
+  }
+  
 }
 .post{
   &__date{
     color: #bec6cb;
   }
 }
+
