--- a/src/_mixin.scss
+++ b/src/_mixin.scss
@@ -8,7 +8,7 @@
   color: #202426;
   background-color: #fcdd5e;
   flex-grow: 1;
-  padding: 0.3em;
+  padding: 0.3em 0.8em;
   text-align: center;
   line-height: 1.2em;
   border: 0;
