--- a/src/components/HomeHero/HomeHero.scss
+++ b/src/components/HomeHero/HomeHero.scss
@@ -44,7 +44,7 @@
     margin: 0;
     color: $white;
     font-size: 1rem;
-    margin-top: 1.5rem;
+    margin-top: 0.3rem;
   }
 
   &__links {
@@ -53,16 +53,20 @@
     padding: 0;
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 0.8rem 1rem;
     width: 100%;
     justify-content: center;
     align-items: center;
-    margin-top: 0.5rem;
   }
 
   &__link {
     display: flex;
     align-items: center;
     flex-grow: 1;
+
+    &--fullwidth {
+      flex-grow: 2;
+      flex-basis: 100%;
+    }
   }
 }
