--- a/src/components/ui/PrimaryButton/PrimaryButton.scss
+++ b/src/components/ui/PrimaryButton/PrimaryButton.scss
@@ -1,15 +1,36 @@
 @use '../../../styles/global/forwards' as *;
 
+a.primary-button {
+  display: block;
+  width: 100%;
+}
+
 .primary-button {
   background-color: $yellow;
   padding: 0.5rem 1rem;
-  color: $yellow-900;
-  flex-grow: 1;
-}
+  color: $black;
+  width: 100%;
+  font-size: 0.9rem;
+  font-weight: 600;
 
-.fullwidth {
-    background-color: $yellow;
-    padding: 0.5rem 1rem;
-    color: $yellow-900;
-    width: 100%;
+  &:hover {
+    background-color: $black;
+    color: $white;
+    @include elevation-medium;
   }
+
+  &:focus,
+  &:focus-visible {
+    outline: 2px solid var(--focus-color, $yellow);
+    outline-offset: 4px;
+  }
+
+  &.disabled,
+  &[disabled] {
+    cursor: not-allowed;
+    pointer-events: none;
+    background-color: transparent;
+    color:$white;
+    border: 2px solid rgba($white, 0.2);
+  }
+}
