adjust layout for desktop

--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -3,6 +3,8 @@
 .home-page{
   background-color: $yellow;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 
   &__scroll-button{
     position: fixed;
@@ -25,11 +27,17 @@
     margin: 0 auto;
     align-items: center;
     justify-content: center;
+    flex-grow: 1;
+    justify-content: start;
+
+    @include breakpoint(tablet) {
+      margin-top: 2rem;
+    }
   }
 
   &__footer{
     background-color: $yellow;
-    text-align: center;
+    text-align: left;
     padding: 1rem;
     
   }
