--- a/src/components/HomeHero/HomeHero.scss
+++ b/src/components/HomeHero/HomeHero.scss
@@ -2,17 +2,55 @@
 
 .home-hero {
   background-color: $blue;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem;
-  text-align: center;
+  padding: 1rem 2rem;
+  flex-grow: 0;
+
+  @include breakpoint(tablet) {
+    padding: 2rem 8rem;
+  }
+
+  @include breakpoint(laptop) {
+    padding: 2rem;
+  }
+
+  &__container {
+    max-width: 800px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    gap: 1rem;
+
+    @include breakpoint(laptop) {
+      flex-direction: row;
+      text-align: left;
+      margin: auto;
+      gap: 2rem;
+    }
+  }
 
   &__image {
     width: 100%;
     height: 33.3vh;
     margin: 0 auto;
+
+    @include breakpoint(laptop) {
+      height: 100%;
+    }
+  }
+
+  &__picture {
+    width: 100%;
+    height: 100%;
+    padding: 0.5rem;
+
+    & img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
   }
 
   &__content {
@@ -45,6 +83,10 @@
     color: $white;
     font-size: 1rem;
     margin-top: 0.3rem;
+
+    @include breakpoint(laptop) {
+      margin-top: 3rem;
+    }
   }
 
   &__links {
