--- a/src/components/ui/PrimaryButton/PrimaryButton.scss
+++ b/src/components/ui/PrimaryButton/PrimaryButton.scss
@@ -12,6 +12,7 @@ a.primary-button {
   width: 100%;
   font-size: 0.9rem;
   font-weight: 600;
+  text-align: center;
 
   &:hover {
     background-color: $black;
