create component to display skills

--- a/src/styles/global/color.scss
+++ b/src/styles/global/color.scss
@@ -15,3 +15,14 @@ $yellow-300:	#feeeae;
 $yellow-500:	#FCDD5E;
 $yellow-700:	#deaa3b;
 $yellow-900:	#893c0c;
+
+$cloud-100:  #e3e4e0;
+$cloud-200:  #d0d1cd;
+$cloud-300:  #bcbdb9;
+$cloud-400:  #a9a9a6;
+$cloud-500:  #959693;
+$cloud-600:  #828280;
+$cloud-700:  #6e6f6d;
+$cloud-800:  #5a5b59;
+$cloud-900:  #474846;
+
