--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -10,7 +10,12 @@ body{
   padding: 0;
   background-color: $yellow;
   color: $black;
+  font-size: 18px;
   
 
   @include body-regular;
+
+  @include breakpoint(laptop) {
+    font-size: 16px;
+  }
 }
