--- a/src/styles/global/typography.scss
+++ b/src/styles/global/typography.scss
@@ -1,7 +1,15 @@
+
 @mixin body-regular {
   font-family: 'Questrial', 'Noto Sans', sans-serif;
   font-weight: 500;
   font-style: normal;
   font-size: 1rem;
   line-height: 1.35;
+}
+
+@mixin section-title{
+  font-family: 'Montserrat', 'Noto Sans', sans-serif;
+  font-weight: 800;
+  font-style: normal;
+  color: #1570bb;
 }
