--- a/src/styles/reset.scss
+++ b/src/styles/reset.scss
@@ -1,3 +1,5 @@
+@use './global/forwards' as *;
+
 /* RESET BASE */
 
 *,
@@ -17,6 +19,10 @@ html, body {
   scroll-behavior: smooth;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  @include breakpoint(laptop) {
+    font-size: 16px;
+  }
 }
 
 img, picture, video, canvas, svg {
