--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,21 +1,30 @@
 @use './global/forwards' as *;
+@use './reset.scss';
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
-body{
+body {
   margin: 0;
   padding: 0;
   background-color: $yellow;
   color: $black;
   font-size: 18px;
-  
 
   @include body-regular;
 
   @include breakpoint(laptop) {
     font-size: 16px;
   }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: 'Montserrat', 'Noto Sans', sans-serif;
 }
