restore deleted files

--- a/src/styles/global/typography.scss
+++ b/src/styles/global/typography.scss
@@ -12,4 +12,7 @@
   font-weight: 800;
   font-style: normal;
   color: #1570bb;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  font-size: 1.5rem;
 }
