--- a/src/components/ui/PrimaryButton/PrimaryButton.scss
+++ b/src/components/ui/PrimaryButton/PrimaryButton.scss
@@ -2,10 +2,14 @@
 
 a.primary-button {
   display: flex;
-  width: fit-content;
+  width: 100%;
   align-items: center;
   justify-content: center;
   flex-grow: 1;
+
+  @include breakpoint(laptop) {
+    width: fit-content;
+  }
 
   &.fullwidth {
   width: 100%;
