--- a/src/components/ui/ProjectCard/ProjectCard.scss
+++ b/src/components/ui/ProjectCard/ProjectCard.scss
@@ -1,50 +1,58 @@
 @use '../../../styles/global/forwards' as *;
 
 .project-card {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  border: 1px solid $cloud-300;
+  padding: 1rem;
+  border-radius: 4px;
+  width: 100%;
+  justify-content: space-between;
+
+  @include breakpoint(laptop) {
+    width: calc((100% - 2rem) / 2);
+  }
+
+  &__content,
+  &__actions {
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
-    border: 1px solid $cloud-300;
-    padding: 1rem;
-    border-radius: 4px;
-    width: 100%;
-    justify-content: space-between;
+  }
+
+  &__actions {
+    margin-top: 1rem;
+  }
+
+  &__title {
+    text-transform: capitalize;
+  }
+
+  &__date {
+    color: $cloud-700;
+  }
+
+  &__buttons {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
 
     @include breakpoint(laptop) {
-      width: calc((100% - 2rem) / 2);
+      flex-direction: row;
+      flex-wrap: wrap;
     }
 
-    &__content, &__actions {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
+    & > * {
+      width: 100%;
     }
+  }
 
-    &__actions {
-      margin-top: 1rem;
-    }
-
-    &__title {
-      text-transform: capitalize;
-    }
-
-    &__date {
-      color: $cloud-500;
-    }
-
-    &__buttons {
-      display: flex;
-      flex-direction: column;
-      gap: 0.5rem;
-
-      @include breakpoint(laptop) {
-        flex-direction: row;
-        flex-wrap: wrap;
-      }
-    }
-
-    &__tags {
-      margin-top: 1rem;
-    }
+  &__tags {
+    margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
 }
-
